# Cifrador-P3-D2

./: CMakeLists.txt  main.cpp
alg_cifrado/: Caesar.cpp  Caesar.h  Cifrar.h  Sustitucion.cpp  Sustitucion.h  Vigenere.cpp  Vigenere.h
client/: client.cpp  client.h
detec_errores/: ErrorDetection.cpp  ErrorDetection.h  Security.cpp  Security.h
interfaz/: ClientGUI.cpp  ClientGUI.h
mains/: ClientGUImain.cpp  client_main.cpp  main.cpp  server_main.cpp  ver_historial.cpp
server/: server.cpp  server.h
